--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,8 @@ edition = "2021"
 
 [dependencies]
 
+x509-verify = { version = "0.4.5", features = ["x509"] }
 # Cryptography
-x509-parser = { version = "0.15.1", features = ["verify", "validate"] }
 jwt-simple = "0.12.7"
 pem = "3.0.2"
 
